--- a/src/css/components.css
+++ b/src/css/components.css
@@ -150,10 +150,10 @@ p {
 .Footer {
   font-size: small;
   text-align: center;
-  position: fixed;
+  /* position: fixed;*/
   left: 0;
   width: 100%;
-  bottom: 0;
+  bottom: 0; 
 }
 
 .heart {
